refactor: SMS/FSC advance()-Pattern mit typed Records und sealed interfaces
- EnrollmentRef: opaker Typ für SMS-Enrollment statt roher Long-ID
- AuthSmsService: startEnrollment/confirmEnrollment/startChallenge/verifyChallenge
  (Modul-interna bleiben im Modul; validated-Flag nicht mehr sichtbar aussen)
- AttemptPendingStore: gemeinsamer typsicherer Helper für JSON-Pending-Daten
- SmsEnrollPending/SmsUsePending/FscPending: typisierte Records mit merge(),
  missingUserInputs(), withXxx()-Methoden
- EnrollStep/UseStep/FscStep: sealed interfaces für datumgetriebene Zustandsableitung
- nextEnrollStep/nextUseStep/nextStep: pure Funktionen ohne Seiteneffekte
- SmsAuthenticationService: advance()-Pattern; alle Seiteneffekte explizit in
  benannten Cases (StartEnrollment, ConfirmEnrollment, ActivateMethod)
- FscIdentificationService: gleiche Struktur mit FscStep.NeedInput/Verify

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>